# mimir-eqsat

./: .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  build.rs  build.sh  dist.sh  eqsat.mim  expose.md
.github/workflows/: build.yml  dist.yml  linux.yml  macos.yml  windows.yml
examples/: example.dot  example.mim  example.sexpr  fib.dot  fib.mim  fib.mimp  fun.dot  fun.mim  fun.mimp  fun.slotted  fun_rw.egg  fun_rw.slotted  import.slotted  import_rw.slotted  loop.ast  loop.dot  loop.egg  loop.ll  loop.mim  loop.mimp  loop.slotted  loop_rw.egg  loop_rw.slotted  loopfull.dot  loopnest.dot  looptyped.dot  pow.slotted  pow_rw.slotted  rec.dot  rec.mim  rec.mimp
examples/core/: 1tuple.mim  icmp.mim  idx.mim  idx.mimp  nat.ast  nat.dot  nat.mim  nat.mimp  nat.sexpr  normalize_add.mim  normalize_add.sexpr  normalize_and_ff.mim  normalize_and_ff_tt.mim  normalize_and_icmps.mim  normalize_and_icmps_lit.mim  normalize_and_tree.mim  normalize_and_tt.mim  normalize_and_tt_tt.mim  normalize_bitcast.mim  normalize_icmp.mim  pow.mim  reassociate.mim  ret_add.dot  ret_add.mim  ret_add.mimp  ret_and.mim  ret_lshr.mim  ret_nand.mim  sub_bug.mim  unary_tuple.mim
include/mim/plug/eqsat/: eqsat.h
include/mim/plug/eqsat/phase/: egg_rewrite.h  rewrite_egg.h  rewrite_slotted.h  slotted_rewrite.h
lit/: pipeline.mim  rebuild_alloc_large.mim  rebuild_beta_equiv.mim  rebuild_fib.mim  rebuild_fun.mim  rebuild_import.mim  rebuild_loop.mim  rebuild_pow.mim  rebuild_pow_pe.mim  rebuild_ptrn.mim  rebuild_rec.mim  rebuild_str.mim  rebuild_union.mim  rebuild_var.mim
lit/egg/: extract_depth.mim  extract_size.mim  rewrite_core_var_lit.mim  rewrite_core_vars.mim  ruleset_core.mim  ruleset_math.mim
lit/rise/: rise.mim
lit/slotted/: extract_size.mim  rewrite_core.mim  ruleset_standard.mim  slotted_config.mim
plug/: eqsat.cpp
plug/phase/: egg_rewrite.cpp  eqsat_phase.cpp  rewrite_egg.cpp  rewrite_slotted.cpp  slotted_rewrite.cpp
scripts/: scope_locs.py
src/: ffi.rs  lib.rs  main.rs
src/mim_egg/: mod.rs  test.rs
src/mim_egg/rulesets/: core.rs
src/mim_slotted/: analysis.rs  mod.rs  test.rs  types.rs
src/mim_slotted/rulesets/: default.rs  mod.rs  rise.rs  standard.rs
src/rules/: core.rs  math.rs  mod.rs
